--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     person(given = "Sercan",
            family = "Kahveci",
            role = c("aut", "cre"),
-           email = "sercan.kahveci@sbg.ac.at")
+           email = "sercan.kahveci@@sbg.ac.at")
 Description: Easily scrape reddit content using the pushshift.io API. PAWR formats your queries, takes breaks when exceeding the rate limit, and outputs the data in a usable format.
 BugReports: https://github.com/Spiritspeak/PAWR/issues
 Depends: R (>= 3.6.1), magrittr, dplyr, httr
@@ -15,3 +15,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 ByteCompile: true
+
+
+
+
