--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ export(PaginateAggs)
 export(PaginateData)
 export(QueryPushshift)
 export(list2df)
+export(now)
 export(refreshPAWR)
 export(unevenrbind)
