Small interim update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(PSParams)
 export(PaginateAggs)
 export(PaginateData)
 export(QueryPushshift)
+export(QueryPushshiftMeta)
 export(list2df)
 export(now)
 export(refreshPAWR)
